--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit>=1.34.0
-pandas>=2.1.0
-numpy>=1.25.0
-requests>=2.31.0
-openpyxl>=3.1.2
+streamlit
+pandas
+numpy
+requests
+plotly
+networkx
+python-louvain
+scikit-learn
