--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,25 +1,18 @@
-# Use Python base image
+# Use Python image
 FROM python:3.10-slim
 
-# Prevent Python from writing pyc files & run in unbuffered mode
-ENV PYTHONUNBUFFERED=1
-
-# Set app directory
+# Set working directory
 WORKDIR /app
 
-# Copy requirements and install
+# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app code
+# Copy the app
 COPY . .
 
-# Streamlit-specific configs
+# Expose Streamlit port
 EXPOSE 8501
-ENV STREAMLIT_PORT=8501 \
-    STREAMLIT_ENABLE_CORS=false \
-    STREAMLIT_ENABLE_XSRF_PROTECTION=false \
-    STREAMLIT_SERVER_HEADLESS=true
 
-# Run the app
+# Run Streamlit
 CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
